--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,21 @@
+@ARTICLE{Li:12,
+   author = {{Li}, N. and {Mao}, S. and {Gao}, L. and {Loeb}, A. and {di Stefano}, R.
+	},
+    title = "{Effects of supermassive binary black holes on gravitational lenses}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1110.0887},
+ primaryClass = "astro-ph.CO",
+ keywords = {black hole physics, gravitational lensing: strong, galaxies: formation, cosmology: theory},
+     year = 2012,
+    month = jan,
+   volume = 419,
+    pages = {2424-2432},
+      doi = {10.1111/j.1365-2966.2011.19893.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.419.2424L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Golse:02,
    author = {{Golse}, G. and {Kneib}, J.-P.},
     title = "{Pseudo elliptical lensing mass model: Application to the NFW mass distribution}",
