--- a/ms.tex
+++ b/ms.tex
@@ -175,14 +175,14 @@ We used finite differencing of visibilities to calculate the gradients, and marg
 \section{Results and Discussions}
 \subsection{Detection of central images with ALMA}
 %In this section, we estimate the detection significance of central lensed images of molecular lines with ALMA. 
-As discussed earlier, the fluxes of central images strongly depend on the slope of the lensing potential, the core size, and the mass of the central SMBHs.  Figure \ref{fig:3} shows the detection significant of a central image for a range of these parameters in a 10-h long ALMA observation. The grey curves (dark to light) correspond to profiles with slopes of $\gamma=0.9, 1.0, 1.1,$ and 1.2.  As seen in this figure, larger stellar cores result in brighter images. %Lensing studies have shown that the total profiles of galaxies are very close to isothermal \red{cite{}}. 
+As discussed earlier, the fluxes of central images strongly depend on the slope of the lensing potential, the core size, and the mass of the central SMBHs.  Figure \ref{fig:3} shows the detection significance of a central image for a range of these parameters in a 10-h long ALMA observation. The grey curves (dark to light) correspond to profiles with slopes of $\gamma=0.9, 1.0, 1.1,$ and 1.2.  As seen in this figure, larger stellar cores result in brighter images. %Lensing studies have shown that the total profiles of galaxies are very close to isothermal \red{cite{}}. 
 When $\gamma=1.0$ and with a core size larger than 150 pc, such observations should be able to detect the central images with more than $5\sigma$ significance. For significantly shallower ($\gamma<0.8$) profile slopes with larger cores, the central image is \emph{magnified} and its detection should be trivial.  The magnification and flux of central images is also influenced by SMBHs.
-SMBHs demagnify the images on scales comparable to the size of their Einstein radii.
+SMBHs demagnify the images on scales comparable to the size of their Einstein radii ($\sim30$ mas for a $2\times10^8M_{\odot}$ SMBH).
 The dashed curves in Figure \ref{fig:3} show the suppression of the fluxes of central images in presence of a $2\times10^8M_{\odot}$ SMBH.
 
-As seen in Figure \ref{fig:3}, and as pointed out by \citet{Keeton:03}, plausible parameters (e.g. core sizes) predict  a wide range of magnifications for   central images. Although for some plausible parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2e8$,$R_{core}<300 pc$ ) there is little chance of detecting the central images, over a non-negligable fraction of parameter space the central images may be detectable. 
+As seen in Figure \ref{fig:3}, and as pointed out by \citet{Keeton:03}, plausible parameters (e.g. core sizes) predict  a wide range of magnifications for   central images. Although for some plausible parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2\times10^8 M_{\odot}$,$R_{core}<300 pc$ ) there is little chance of detecting the central images, over a non-negligable fraction of parameter space the central images may be detectable. 
 
-We also find that the detection significance of the central images can increase by about $3\sigma$ for an extended source with a radius of 1 kpc compared to a point source. Since extended sources cover a larger area of the source plane, which may include regions with higher magnifications, the resulting flux can be larger than the flux of more compact sources.
+We also find that the detection significance of the central images can increase by about $3\sigma$ for an extended source with a radius of 1 kpc compared to a point source. Since extended sources occupy a larger area of the source plane, which may cover regions with higher magnifications, the resulting flux can be larger than the flux of more compact sources.
 %\begin{framed}
 %1) We evaluate the detection significance of central images over a range of relevant parameters. \\ \\
 %2) Figure 4 shows our results for a 10-hr long observation with ALMA\\ \\
@@ -208,15 +208,15 @@ The source has a Gaussian light profile with an rms of 600 pc. The red curves sh
 \end{figure}
 
 \subsection{SMBHs and the core size}
-We studied the constraints that deep observations of molecular lines can place on the slope of the density profile, the size of the stellar core, and the mass of the SMBHs. 
+We studied the constraints that could be placed on the slope of the density profile, the size of the stellar core, and the mass of the SMBHs in such deep observations. 
 We performed a Fisher analysis to examine the constrains and parameter degeneracies in simulations in which the central images are detected, as well as those in which they are below the detection limit. All model parameters were included in the Fisher matrix, and nuisance parameters were later marginalize over (e.g. intrinsic source flux and position) to obtain the marginalized likelihood of the relevant parameters.  
  Figure \ref{fig:4} shows the parameter covariance for two examples with different core radii (top panel:  $R_{core}$=170 pc, bottom panel: $R_{core}$=450 pc).
 % . As seen in Figure \ref{fig:3},  this parameter combination results in a $\sim3\sigma$ detection of the central image. 
-We found that when $\gamma=1$, cores sizes larger than 100 pc can be measured with high significance. As seen in top panel of Figure \ref{fig:4}, 
+We found that when $\gamma=1$, core sizes larger than 100 pc can be measured with high significance. As seen in top panel of Figure \ref{fig:4}, 
 the mass of SMBH is degenerate with the core size: larger cores result in brighter images, whose flux can be supressed by a more massive SMBH.
 This degeneracy,  however,  breaks when the core size is very large. 
 Large cores produce more extended central images that are spatially resolved. The distortion caused by a SMBH can distort this image on smaller scales, resulting in a distinct dip in its surface brightness. %, which breaks the degeneracy of the SMBH with the core size (for point sources this will be observed as the plotting of the central image by the SMBH). %Rusin  Keeton Winn 2005
-We found that for cores $\gtrsim200$ pc, SMBH masses could be measured with high significance (e.g., bottom panel of Figure \ref{fig:4}), but for smaller core sizes, only upper limits on the mass of SMBHs can be placed.
+We found that for cores with a radius larger than $200$ pc, central SMBH masses could be measured with high significance (e.g., bottom panel of Figure \ref{fig:4}), but for smaller core sizes, only upper limits on the mass of SMBHs can be placed.
 We also find that when the core size is larger, the constraints on the density profile slope are stronger.
 
 %\begin{framed}
@@ -257,18 +257,31 @@ Under such conditions, we found some configurations that allowed a detection of 
 %found cases with a shallow potential and a large stellar core, which result in bright central images, we found certain configurations in which the resolved shape of the central image can allow a detection of the masses of both SMBHs. 
 
 To estimate the probability of configurations which allow detection of binary SMBHs, we simulated many realizations of the positions of the SMBHs for a high resolution (50 mas) 50-h long observation. 
-We found that $\lesssim5\%$ of the simulations, in which the core size was larger than 200 pc, both SMBHs were detected. 
-  Although this number may seems promising, the prospects of such measurements will be limited by the number of discovered bright central images, which based on their current dearth, may be very few.
-We conclude that only under very rare conditions, and with very long observations ($>40$ hours), central image may allow us to probe binary SMBHs. The prospects of such measurement will ultimately depend on discoveries of much larger samples of lenses \citep{}. 
+We found that $\sim10\%$ of the simulations, in which the core size was larger than 200 pc, both SMBHs were detected. 
+This number is much larger than what is calculated in \citet{Li:12}, since they estimated  the probabilities for point sources, appropriate for lensed quasar samples. The extended structure of the background source can significantly increase the probability of 
 
+  Although this number may seems promising, the prospects of such measurements will be limited by the number of discovered bright central images, which based on their current dearth, may be few.
+We conclude that, only under rare conditions, and with very long observations ($>40$ hours), central image may allow us to probe binary SMBHs. The prospects of such measurement will ultimately depend on discoveries of much larger samples of lenses \citep{}. 
+
+%The magnified images of the lens allow a detailed reconstruction of the background source.  It is therefore easy to distinguish that the structure in the central image is not due to the structure of the source, but are caused by lensing by binary SMBHs.
 %Since the suitability for such measurements will depend on the core size and slope of the stellar light, future high resolution observations with thirty meter telescopes, may help select systems with the right range of morphological parameters, to be followed up.
 
 
 
+\begin{figure}
+\begin{center}
+\centering
+\includegraphics[trim= 20 0 20 0, width=0.45\textwidth]{figures/f_05.eps}
+\centering
+\end{center}
+\caption{ Lensing of a central image by two SMBHs with masses of $4\times 10^8M_{\odot}$. The left panel shows the simulated central image. The red crosses show the positions of the SMBHs. The white circle has a radius of 1 kpc  from the center of the galaxy. The right panel shows the same data after convolution with the ALMA beam. The beam is shown in the lower panel.
+\label{fig:5}}
+\end{figure}
+
 
 
 \section{Conclusion}
-We examined the prospects of detecting central, demagnified images of strongly lensed molecular lines with ALMA. We found that there is a non-negligible space of realistic and plausible parameters that result in a high significance detection of the central images. We showed that such deep observations can either allow a measurement of the mass of the central SMBH and the stellar core size, or place strong limits on them.
+We have examined the prospects of detecting central, demagnified images of strongly lensed molecular lines with ALMA. We found that there is a non-negligible space of realistic and plausible parameters that result in a high significance detection of the central images. We showed that such deep observations can either allow a measurement of the mass of the central SMBH and the stellar core size, or place strong limits on them.
 We also studied the possibility of detecting binary SMBHs and found that only under very rare conditions central images may allow detection of both SMBHs. 
 
 
